change form vue settings

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <div id="map" class="map"></div>
   <div id="forms">
    <div class="positionInput">
-    緯度:<input v-model="latitude" number>
-    経度:<input v-model="longitude" number>
-    <button>Action</button>
+    緯度:<input v-model="position.latitude" number>
+    経度:<input v-model="position.longitude" number>
+    <button @click="setFromNowPlace" :disabled="checkGeolocation()">Set now Position</button>
    </div>
   </div>
  </body>
