--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     緯度:<input v-model="position.latitude" number>
     経度:<input v-model="position.longitude" number>
     <button @click="setFromNowPlace" :disabled="checkGeolocation()">Set Now Place</button>
+    <button @click="goTo">Go To</button>
+    <label><input type="checkbox" v-model="flags.setWhenClicked">Set place when map clicked</label>
     </div>
    </div>
   </div>
