--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     経度:<input v-model="position.longitude" number>
     <button @click="setFromNowPlace" :disabled="checkGeolocation()">Set Now Place</button>
     <button @click="goTo">Go To</button>
+    <button @click="addFavoritePlace">Save to localStorage</button>
     <label><input type="checkbox" v-model="flags.setWhenClicked">Set place when map clicked</label>
     </div>
    </div>
